# search_similar_image

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: run.yaml
docs/: conf.py  index.rst  modules.rst  search_similar_image.model.rst  search_similar_image.model.search_model.rst  search_similar_image.rst  tests.rst  tests.test_search_img.rst
docs/model/: index.html
docs/search_similar_image/: index.html
docs/search_similar_image/model/: search_model.html
docs/search_similar_image/utils/: data_utils.html
docs/utils/: index.html  model_utils.html
search_similar_image/model/: __init__.py  search_model.py
search_similar_image/utils/: data_utils.py
tests/: test_search_img.py  test_utils.py
