[tool.poetry]
name = "search_similar_image"
version = "0.1.0"
description = ""
authors = ["tocom <tcom242242@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
timm = "^0.6.12"
faiss-cpu = "^1.7.3"
pdoc3 = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
